k8s/backend.yaml
# 1. Deployment: 백엔드 컨테이너를 실행하고 관리합니다.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1 # 파드(Pod) 개수 (일단 1개로 시작)
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend-image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    # [핵심] 방금 만든 BackendConfig를 이 서비스에 적용하라는 지시입니다.
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
